Cell tracking examples (#22)
* Fixed bug on cell tracking domain subset.

1. Changed subset domain using “geolimits” in idcells_reflectivity.py to be consistent with Tb tracking geolimits order: [lon_min, lat_min, lon_max, lat_max].
2. Updated LASSO cell tracking config templates.
3. Removed Desk LocalCluster “silence_logs” keyword in cell tracking run scripts to reduce run time log messages.

* Revised cell identification codes to work with 3D CSAPR radar data properly.

1. Revised idcells_reflectivity.py to make it work properly with 3D CSAPR gridded data using the dimension and variable names from the config file.
2. Added an option in steiner_func.py to choose different convolution method in calculating background reflectivity (using argument “convolve_method”). Default is ‘ndimage’, the same with previous version. Another option is use ‘signal’, which allows the use of FFTconvolve and could be much faster.
3. Added “convolve_method” argument in cell tracking config files.
4. Removed some old cell tracking config files.

--- a/config/config_lasso_wrf100m_regrid500m.yml
+++ b/config/config_lasso_wrf100m_regrid500m.yml
@@ -42,9 +42,9 @@ raw_databasename: 'corlasso_sub_cloudOnHamsl.M1.m1.'
 databasename: 'reg_refl_'
 
 # Input files directory
-clouddata_path: '/gpfs/wolf/cli120/proj-shared/zfeng/cacti/les/20181204/gefs18/run/merged/'
+clouddata_path: '/gpfs/wolf/atm131/proj-shared/zfeng/cacti/les/20181204/gefs18/run/merged/'
 # Working directory for the tracking data
-root_path: '/gpfs/wolf/cli120/proj-shared/zfeng/cacti/les/20181204/gefs18/'
+root_path: '/gpfs/wolf/atm131/proj-shared/zfeng/cacti/les/20181204/gefs18/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
@@ -86,6 +86,8 @@ conv_rad_increment: 0.5
 conv_rad_start: 1.0
 # Background reflectivity step-function increment [dB]
 bkg_refl_increment: 5
+# Convolution method to calculate background reflectivity: 'ndimage' (default), 'signal' (FFT)
+convolve_method: 'ndimage'
 # Maximum convective radius dilation [km]
 maxConvRadius: 5
 # Define a set of radii for final step of convective cell expansion [km]
