--- a/config/config_lasso_wrf2.5km_template.yml
+++ b/config/config_lasso_wrf2.5km_template.yml
@@ -35,9 +35,9 @@ time_format: 'yyyy-mo-dd_hh_mm_ss'
 databasename: wrfout_d02_
 
 # Input files directory
-clouddata_path: '/gpfs/wolf/cli120/proj-shared/d3m088/cacti/production/meso/STARTDATE/ENSMEMBER/run_d12/'
+clouddata_path: '/gpfs/wolf/atm131/proj-shared/d3m088/cacti/production/meso/STARTDATE/ENSMEMBER/run_d12/'
 # Working directory for the tracking data
-root_path: '/gpfs/wolf/cli120/proj-shared/zfeng/cacti/meso/STARTDATE/ENSMEMBER/'
+root_path: '/gpfs/wolf/atm131/proj-shared/zfeng/cacti/meso/STARTDATE/ENSMEMBER/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
@@ -59,8 +59,8 @@ advection_buffer: 6  # number of grid points around the edge of domain to buffer
 advection_size_threshold: 10  # number of min valid points to calculate advection
 advection_tiles: [1,1]   # number of tiles to calculate advection [y,x]
 advection_filename: 'advection_'
-# Subset boundary [lon_min, lon_max, lat_min, lat_max]
-geolimits: [-65.9, -63.4, -33.1, -31.0]
+# Subset boundary [lon_min, lat_min, lon_max, lat_max]
+geolimits: [-65.9, -33.1, -63.4, -31.0]
 
 # Cell identification parameters
 # Parameter in Steiner
@@ -81,6 +81,8 @@ conv_rad_increment: 0.5
 conv_rad_start: 4.5
 # Background reflectivity step-function increment [dB]
 bkg_refl_increment: 5
+# Convolution method to calculate background reflectivity: 'ndimage' (default), 'signal' (FFT)
+convolve_method: 'ndimage'
 # Maximum convective radius dilation [km]
 maxConvRadius: 5
 # Define a set of radii for final step of convective cell expansion [km]
