--- a/config/config_lasso_wrf100m_template.yml
+++ b/config/config_lasso_wrf100m_template.yml
@@ -36,11 +36,11 @@ ensmember: 'ENSMEMBER'
 sample_time_freq: '5min'
 
 # Specify tracking input data date/time string format
-# This is the preprocessed file that contains Tb & rainrate
+# This is only used to identify the files within the tracking period
 # E.g., databasename20181101.011503.nc --> yyyymodd.hhmmss
 # E.g., databasename2018-11-01_01:15:00 --> yyyy-mo-dd_hh:mm:ss
-time_format: 'yyyymodd??_?hhmmss'
-rawdatabasename: 'corlasso_sub_cloudOnHamsl.M1.m1.'
+time_format: 'yyyymodd.hhmmss'
+rawdatabasename: 'corlasso.cldhamsl.STARTDATE00ENSMEMBERd4.base.M1.m1.'
 databasename: 'reg_refl_'
 
 # Raw input files directory
