--- a/config/config_dyamond_nicam.yml
+++ b/config/config_dyamond_nicam.yml
@@ -3,8 +3,8 @@
 # Tracking uses collocated Tb + Precipitation
 
 # Processing steps:
-run_idfeature : True
-run_tracksingle : True
+run_idfeature : False
+run_tracksingle : False
 run_gettracks : True
 run_trackstats : True
 run_identifymcs : True
@@ -16,7 +16,7 @@ run_speed : True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses : 32  # Number of processors to use if run_parallel=1
+nprocesses : 16  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -29,15 +29,14 @@ enddate: '20200301.0000'
 # E.g., databasename20181101.011503.nc --> yyyymodd.hhmmss
 # E.g., databasename2018-11-01_01:15:00 --> yyyy-mo-dd_hh:mm:ss
 time_format: 'yyyymoddhh'
-databasename:  'pr_rlut_hourly_ICON-SAP-5km_DW-ATM_'
+databasename:  'pr_rlut_hourly_NICAM-3km_DW-ATM_'
 
 # Input files directory
-clouddata_path: '/global/cfs/cdirs/m1867/zfeng/dyamond-winter/mpi/olr_pcp/'
+clouddata_path: '/global/cfs/cdirs/m1867/zfeng/dyamond-winter/nicam/olr_pcp/'
 # Working directory for the tracking data
-root_path: '/global/cfs/cdirs/m1867/zfeng/dyamond-winter/mpi/'
+root_path: '/global/cfs/cdirs/m1867/zfeng/dyamond-winter/nicam/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
-# stats_path_name: 'stats'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
@@ -93,7 +92,7 @@ pf_link_area_thresh:  648.0  # [km^2]
 othresh: 0.5  # overlap fraction threshold. Clouds that overlap more than this between times are tracked.
 timegap: 3.1  # [hour] If missing data duration longer than this, tracking restarts
 nmaxlinks: 50  # Maximum number of clouds that any single cloud can be linked to
-maxnclouds:  4000  # Maximum number of clouds in one snapshot
+maxnclouds:  3000  # Maximum number of clouds in one snapshot
 duration_range: [2, 400] # A vector [minlength,maxlength] to specify the duration range for the tracks
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
 # 0:keep all tracks; 1:remove short tracks
