--- a/config/config_wrf4km_mcs_tbpf_example.yml
+++ b/config/config_wrf4km_mcs_tbpf_example.yml
@@ -16,7 +16,9 @@ run_speed : True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses : 30  # Number of processors to use if run_parallel=1
+nprocesses : 4  # Number of processors to use if run_parallel=1
+dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
+timeout: 360  # [seconds] Dask timeout limit
 
 # Start/end date and time
 startdate: '20140319.0000'
@@ -30,19 +32,19 @@ time_format: 'yyyy-mo-dd_hh:mm:ss'
 databasename: 'wrfout_rainrate_tb_'  # Note: include all strings before the time (including "_", ".")
 
 # WRF raw data
-wrfout_path: '/global/cscratch1/sd/tais958/tozhe/20140320_12_24/'
+wrfout_path: 'WRFOUT_DIR'
 wrfout_basename: 'wrfout_d01_'
 # Tracking input files directory
-clouddata_path: '/global/cscratch1/sd/feng045/iclass/goamazon/wrfda/tb_rr/'
+clouddata_path: 'TB_RR_DIR/'
 # Working directory for the tracking data
-root_path: '/global/cscratch1/sd/feng045/iclass/goamazon/wrfda/'
+root_path: 'TRACK_DIR/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
 # Land mask file
-landmask_filename: '/global/cscratch1/sd/feng045/iclass/goamazon/wrfda/map_data/wrf_landmask.nc'
+landmask_filename: 'TB_RR_DIR/wrf_landmask.nc'
 landmask_varname: 'LANDMASK'
 
 # Input dataset structure
@@ -53,6 +55,9 @@ tb_varname:  'tb'
 pcp_varname: 'rainrate'
 clouddatasource: 'model'
 pfdatasource:  'wrf'
+x_dimname: 'lon'
+y_dimname: 'lat'
+time_dimname: 'time'
 xcoord_name: 'lon2d'
 ycoord_name: 'lat2d'
 
@@ -118,25 +123,28 @@ heavy_rainrate_thresh:  10.0  # Heavy rain rate threshold [mm/hr]
 
 # MCS PF parameter coefficients [intercept, slope]
 # These parameters are derived with pf_rr_thres:  2 mm/h
+# coefs_pf_area:  [1962, 0]           # 1% [changed slope to 0: independent of lifetime]
 # coefs_pf_area:  [1962.11, -14.598]      # 1%
-# coefs_pf_area:  [1962.11, 0]           # 1% [changed slope to 0: independent of lifetime]
 # coefs_pf_area:  [2119.02, 61.143]      # 3%
 coefs_pf_area:  [2874.05, 89.825]  # 5% [recommended]
 # coefs_pf_area:  [4160.82, 93.077]      # 7%
 # coefs_pf_area:  [4988.15, 138.172]      # 10%
 
+# coefs_pf_rr:  [2.72873, 0.0]
 # coefs_pf_rr:  [2.72873, 0.0008317]      # 1%
 # coefs_pf_rr:  [2.81982, 0.0135463]      # 3%
 coefs_pf_rr:  [3.01657, 0.0144461]  # 5% [recommended]
 # coefs_pf_rr:  [3.14895, 0.0150174]      # 7%
 # coefs_pf_rr:  [3.34859, 0.0172043]      # 10%
 
+# coefs_pf_skew:  [0.036384, 0]
 # coefs_pf_skew:  [0.036384, 0.0022199]      # 1%
 # coefs_pf_skew:  [0.072809, 0.0104444]      # 3%
 coefs_pf_skew:  [0.194462, 0.0100072]  # 5% [recommended]
 # coefs_pf_skew:  [0.256639, 0.0106527]      # 7%
 # coefs_pf_skew:  [0.376142, 0.0095545]      # 10%
 
+# coefs_pf_heavyratio:  [0.750260, 0]       
 # coefs_pf_heavyratio:  [0.750260, 0.4133300]  # 5%
 coefs_pf_heavyratio:  [3.419024, 0.4387090]  # 10% [recommended]
 # coefs_pf_heavyratio:  [4.753215, 0.4886454]  # 15%
