--- a/config/config_csapr500m_example.yml
+++ b/config/config_csapr500m_example.yml
@@ -1,5 +1,5 @@
 ---
-# Example radar cell tracking configuration file (500m resolution)
+# Example CACTI CSAPR-2 radar cell tracking configuration file (500m resolution)
 
 # Identify features to track
 run_idfeature: True
@@ -17,7 +17,7 @@ run_mapfeature: True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses: 12  # Number of processors to use if run_parallel=1
+nprocesses: 4  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -33,16 +33,16 @@ time_format: 'yyyymodd.hhmmss'
 databasename: taranis_corcsapr2cfrppiqcM1.c1.
 
 # Input files directory
-clouddata_path: '/gpfs/wolf/atm131/proj-shared/zfeng/pyflextrkr_paper/radar/input/'
+clouddata_path: 'INPUT_DIR/'
 # Working directory for the tracking data
-root_path: '/gpfs/wolf/atm131/proj-shared/zfeng/pyflextrkr_paper/radar/'
+root_path: 'TRACK_DIR/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'celltracking'
 
 # Terrain file
-terrain_file: '/gpfs/wolf/atm131/proj-shared/zfeng/cacti/csapr/corgridded_terrain.c0/CSAPR2_Taranis_Gridded_500m.Terrain_RangeMask.nc'
+terrain_file: 'INPUT_DIR/CSAPR2_Taranis_Gridded_500m.Terrain_RangeMask.nc'
 # Elevation variable to use in terrain file
 elev_varname: 'hgt'
 # Range mask variable to use in terrain file
