Added a general link merge/split workflow.
1. Added a general function to link small merge or split tracks to main tracks: link_mergesplit_tracks.py.

The function is similar to identifymcs.py except more general and work with any feature tracking. The main tracks are defined by a simple maximum area and lifetime thresholds. Small merge or split tracks associated with the main tracks with duration less than user-defined thresholds are removed as individual tracks from the track stats files. Their cloud numbers, area at the corresponding times are saved with the main tracks.

2. Updated the general feature tracking run script (run_generic_tracking.py) and config file (config_era5_z500_example.yml) with the link feature function and thresholds.

3. Moved the function (load_sparse_trackstats) from identifymcs.py to ft_utilities.py.

4. Fixed a bug in mapfeature_func.py for feature_type == ‘tb_pf’.

5. Updated the general track path quicklook plotting script: plot_subset_generic_tracks_demo.py to work with either the standard track stats files or after linking the merge/split tracks.

--- a/config/config_era5_z500_example.yml
+++ b/config/config_era5_z500_example.yml
@@ -9,6 +9,8 @@ run_tracksingle: True
 run_gettracks: True
 # Calculate feature statistics
 run_trackstats: True
+# Link merge/split tracks
+run_mergesplit: True
 # Map tracking to pixel files
 run_mapfeature: True
 
@@ -68,6 +70,12 @@ trackstats_dense_netcdf: 1
 # Minimum time difference threshold to match track stats with cloudid pixel files
 match_pixel_dt_thresh: 60.0  # seconds
 
+# Link merge/split parameters to main tracks
+maintrack_area_thresh: 10000  # [km^2] Main track area threshold
+maintrack_lifetime_thresh: 96  # [hour] Main track duration threshold
+split_duration: 96  # [hour] Split tracks <= this length is linked to the main tracks
+merge_duration: 96  # [hour] Merge tracks <= this length is linked to the main tracks
+
 # Define tracked feature variable names
 feature_varname: 'feature_number'
 nfeature_varname: 'nfeatures'
@@ -77,4 +85,6 @@ featuresize_varname: 'npix_feature'
 tracks_dimname: 'tracks'
 times_dimname: 'times'
 fillval: -9999
+# Output file base names
+finalstats_filebase: 'trackstats_final_'
 pixeltracking_filebase: 'z500tracks_'
