Added a new WRF MCS tracking workflow.
1. Added a new MCS tracking run script for WRF: run_mcs_tbpf_wrf.py. The run script performs end-to-end MCS tracking on raw WRF output data using Tb and rain rate.

2. Modified preprocess_wrf_tb_rainrate.py to a function and integrated into run_mcs_tbpf_wrf.py.

3. Added a flag ‘run_preprocess’ in config_wrf4km_mcs_tbpf_example.yml to control preprocessing the WRF data to produce Tb and rain rate from raw WRF output files.

4. Moved grow_cells and get_neighborhood functions from label_and_grow_cold_clouds.py to ftfunctions.py. These two general functions can be used in other codes.

5. Corrected a bug introduced in the last commit in run_mcs_tbpf.py.

--- a/config/config_wrf4km_mcs_tbpf_example.yml
+++ b/config/config_wrf4km_mcs_tbpf_example.yml
@@ -3,6 +3,7 @@
 # Tracking uses collocated Tb + Precipitation
 
 # Processing steps:
+run_preprocess: False
 run_idfeature : True
 run_tracksingle : True
 run_gettracks : True
@@ -50,7 +51,7 @@ landmask_varname: 'LANDMASK'
 # Input dataset structure
 pixel_radius:  4.0  # [km] Spatial resolution of the input data
 datatimeresolution: 1.0  # [hour] Temporal resolution of the input data
-# Variable names in the input dat
+# Variable names in the input data
 tb_varname:  'tb'
 pcp_varname: 'rainrate'
 clouddatasource: 'model'
