Completed the first version of MCS tracking with Tb + Radar3D.
1. Added calculating convective core statistics in pyflextrkr/matchtbradar_func.py.

2. Added robust MCS identification using Radar3D: pyflextrkr/robustmcs_radar.py. The lifecycle definition part of the code still need to be ported.

3. Added new optional variables in: pyflextrkr/mapfeature_func.py, if “radar3d” is in feature_type.

4. Added new parameters in example config: config/config_wrf_mcs_hyperfacets_ctl.yml

5. Updated quicklook plot script: Analysis/plot_subset_tbze_mcs_tracks_demo.py to work with the new Tb + Radar3D MCS tracking workflow.

6. Added a subset_ds_geolimit function in pyflextrkr/ft_utilities.py. This function is useful to subset landmask file to match a subset domain.

Fixed some bugs introduced from new codes.

7. Updated pyflextrkr/matchtbpf_func.py to be consistent with changes from pyflextrkr/matchtbradar_func.py.

8. Added several new landmask parameters (specifying the dimension names and coordinate names in the landmask file) in the MCS tracking config examples. These parameters are required when a landmask file is provided to subset the landmask to match the dataset IF geolimit subset is used.

--- a/config/config_imerg_mcs_tbpf_example.yml
+++ b/config/config_imerg_mcs_tbpf_example.yml
@@ -41,9 +41,13 @@ tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
-# Land mask file (optional)
+# Land mask file (optional, leave it an empty string if not available)
 landmask_filename: 'INPUT_DIR/IMERG_landmask_saag.nc'
 landmask_varname: 'landseamask'
+landmask_x_dimname: 'lon'
+landmask_y_dimname: 'lat'
+landmask_x_coordname: 'lon'
+landmask_y_coordname: 'lat'
 
 # Specific to GPM Tb+IMERG combined dataset
 pixel_radius:  10.0  # [km] Spatial resolution of the input data
