--- a/config/config_gridrad_mcs_example.yml
+++ b/config/config_gridrad_mcs_example.yml
@@ -17,15 +17,13 @@ run_speed : True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses : 24  # Number of processors to use if run_parallel=1
+nprocesses : 8  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
 # Start/end date and time
-#startdate: '20150503.0000'
-#enddate: '20150601.0000'
 startdate: '20200810.0000'
-enddate: '20200812.0000'
+enddate: '20200813.0000'
 
 # Specify tracking input data date/time string format
 # This is the preprocessed file that contains Tb & rainrate
@@ -34,24 +32,18 @@ enddate: '20200812.0000'
 time_format: 'yyyymoddThhmmss'
 # regrid_basename: 'wrfout_rainrate_tb_zh_mh_'  # Note: include all strings before the time (including "_", ".")
 databasename: 'obs_v4_2_'
-# Specify vertical height levels to interpolate reflectivity (unit: km ASL)
-# interp_levels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 
-#   11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
 
-# WRF raw data
-# wrfout_path: '/global/cscratch1/sd/feng045/HyperFACETS/wrf_ext/ctl/wrfout/'
-# wrfout_basename: 'wrfout_d01_'
 # Tracking input files directory
-clouddata_path: '/global/cscratch1/sd/jli628/obs_combine/2020/'
+clouddata_path: 'INPUT_DIR/'
 # Working directory for the tracking data
-root_path: '/global/cscratch1/sd/feng045/pyflextrkr_test/mcs_tbpfradar3d/gridrad/'
+root_path: 'TRACK_DIR/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
 # Land mask file
-landmask_filename: '/global/cscratch1/sd/feng045/usa/gridrad_v2/map_data/mergir4km_grid_terrain_landmask.nc'
+landmask_filename: 'INPUT_DIR/mergir4km_gridrad_landmask.nc'
 landmask_varname: 'LANDMASK'
 landmask_x_dimname: 'lon'
 landmask_y_dimname: 'lat'
@@ -64,14 +56,11 @@ datatimeresolution: 1.0  # [hour] Temporal resolution of the input data
 # Variable names in the input data
 tb_varname:  'Tb'
 pcp_varname: 'PCP_acc1h'
-linkpf_varname: 'reflectivity_comp'
-# dbz_varname: 'Reflectivity'
-# zmelt_varname: 'ERAI_0C'
+reflectivity_varname: 'Reflectivity'
+meltlevel_varname: 'ERAI_0C'
 clouddatasource: 'gpmir'
 radardatasource: 'gridrad'
 pfdatasource:  'wrf'  # flag for landmask convention to calculate PF land fraction
-# xcoord_name: 'lon'
-# ycoord_name: 'lat'
 t_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
@@ -79,8 +68,6 @@ z_dimname: 'height'
 x_coordname: 'longitude'
 y_coordname: 'latitude'
 z_coordname: 'height'
-reflectivity_varname: 'Reflectivity'
-meltlevel_varname: 'ERAI_0C'
 
 # Specify types of feature being tracked
 # This adds additional feature-specific statistics to be computed
@@ -113,14 +100,13 @@ updraft_ReflGradiant_MaxHeight:  7.0
 updraft_CompRefl_Thresh:  40.0
 # Number of vertical level gaps allowed in calculating echo-top height
 echotop_gap: 1
-
 # Height level (ASL) to save 2D reflectivity [km]
 dbz_lowlevel_asl: 2.0
 
 # Cloud identification parameters
 mincoldcorepix:  4  # Minimum number of pixels for the cold core
 smoothwindowdimensions:  30  # Dimension of the Box2DKernel filter on Tb.
-medfiltsize: 5      # Window size to perform medfilt2d to fill missing Tb pixels, must be an odd number
+medfiltsize: 9      # Window size to perform medfilt2d to fill missing Tb pixels, must be an odd number
 geolimits: [-90, -360, 90, 360] # 4-element array to subset domain boundaries [lat_min, lon_min, lat_max, lon_max]
 area_thresh:  36  # [km^2] Minimum area to define a cloud
 miss_thresh:  0.35  # Missing data fraction threshold. If missing data exceeds this, the time frame will be omitted.
@@ -133,6 +119,7 @@ warmanvilexpansion:  0  # Not working yet, set this to 0 for now
 cloudidmethod: 'label_grow'
 # Specific parameters to link cloud objects using PF
 linkpf:  1  # Set to 1 to turn on linkpf option; default: 0
+linkpf_varname: 'reflectivity_comp'   # PF variable name to perform linkpf operation
 pf_smooth_window:  7  # Smoothing window for identifying PF
 pf_dbz_thresh:  25  # [dBZ] for reflectivity, or [mm/h] for rainrate
 pf_link_area_thresh:  300.0  # [km^2]
