--- a/config/config_wrf_mcs_tbradar_example.yml
+++ b/config/config_wrf_mcs_tbradar_example.yml
@@ -1,6 +1,6 @@
 ---
 # MCS tracking configuration file
-# Tracking uses collocated Tb + Precipitation
+# Tracking uses collocated Tb + Radar3D
 
 # Processing steps:
 run_preprocess: False
@@ -22,8 +22,6 @@ dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
 # Start/end date and time
-#startdate: '20150503.0000'
-#enddate: '20150601.0000'
 startdate: '20150506.0000'
 enddate: '20150510.0000'
 
@@ -42,16 +40,16 @@ interp_levels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
 wrfout_path: '/global/cscratch1/sd/feng045/HyperFACETS/wrf_ext/ctl/wrfout/'
 wrfout_basename: 'wrfout_d01_'
 # Tracking input files directory
-clouddata_path: '/Users/feng045/data/demo/mcs_tbpfradar3d/input/'
+clouddata_path: 'INPUT_DIR/'
 # Working directory for the tracking data
-root_path: '/Users/feng045/data/demo/mcs_tbpfradar3d/'
+root_path: 'TRACK_DIR/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
 # Land mask file
-landmask_filename: '/Users/feng045/data/demo/mcs_tbpfradar3d/input/wrf_landmask.nc'
+landmask_filename: 'INPUT_DIR/wrf_landmask.nc'
 landmask_varname: 'LANDMASK'
 landmask_x_dimname: 'west_east'
 landmask_y_dimname: 'south_north'
@@ -61,17 +59,21 @@ landmask_y_coordname: 'XLAT'
 # Input dataset structure
 pixel_radius:  3.0  # [km] Spatial resolution of the input data
 datatimeresolution: 1.0  # [hour] Temporal resolution of the input data
-# Variable names in the input dat
+# Variable names in the input data
 tb_varname:  'tb'
 pcp_varname: 'rainrate'
-linkpf_varname: 'reflectivity_comp'
-dbz_varname: 'reflectivity'
-zmelt_varname: 'meltinglevelheight'
+reflectivity_varname: 'reflectivity'
+meltlevel_varname: 'meltinglevelheight'
 clouddatasource: 'model'
 radardatasource: 'wrf'
-pfdatasource:  'wrf'
-xcoord_name: 'lon2d'
-ycoord_name: 'lat2d'
+pfdatasource:  'wrf'  # flag for landmask convention to calculate PF land fraction
+t_dimname: 'time'
+x_dimname: 'lon'
+y_dimname: 'lat'
+z_dimname: 'level'
+x_coordname: 'lon2d'
+y_coordname: 'lat2d'
+z_coordname: 'level'
 
 # Specify types of feature being tracked
 # This adds additional feature-specific statistics to be computed
@@ -104,15 +106,6 @@ updraft_ReflGradiant_MaxHeight:  7.0
 updraft_CompRefl_Thresh:  40.0
 # Number of vertical level gaps allowed in calculating echo-top height
 echotop_gap: 1
-t_dimname: 'time'
-x_dimname: 'lon'
-y_dimname: 'lat'
-z_dimname: 'level'
-x_varname: 'lon2d'
-y_varname: 'lat2d'
-z_varname: 'level'
-reflectivity_varname: 'reflectivity'
-meltlevel_varname: 'meltinglevelheight'
 # Height level (ASL) to save 2D reflectivity [km]
 dbz_lowlevel_asl: 2.0
 
@@ -132,6 +125,7 @@ warmanvilexpansion:  0  # Not working yet, set this to 0 for now
 cloudidmethod: 'label_grow'
 # Specific parameters to link cloud objects using PF
 linkpf:  1  # Set to 1 to turn on linkpf option; default: 0
+linkpf_varname: 'reflectivity_comp'   # PF variable name to perform linkpf operation
 pf_smooth_window:  10  # Smoothing window for identifying PF
 pf_dbz_thresh:  25  # [dBZ] for reflectivity, or [mm/h] for rainrate
 pf_link_area_thresh:  300.0  # [km^2]
