--- a/config/config_mcs_demo.yml
+++ b/config/config_mcs_demo.yml
@@ -4,12 +4,12 @@
 
 # Processing steps:
 run_preprocess: False
-run_idfeature : True
-run_tracksingle : True
-run_gettracks : True
-run_trackstats : True
-run_identifymcs : True
-run_matchpf : True
+run_idfeature : False
+run_tracksingle : False
+run_gettracks : False
+run_trackstats : False
+run_identifymcs : False
+run_matchpf : False
 run_robustmcs : True
 run_mapfeature : True
 run_speed : True
